[package]
name = "clyon"
version = "0.1.0"
authors = ["Albert <albertywang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "clyon"
crate_type = ["staticlib"]

[dependencies]
lyon = "0.17.5"
lyon_path = "0.17.3"